[gd_scene load_steps=8 format=3 uid="uid://bfivvgffxw64f"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_h0xn7"]
[ext_resource type="Texture2D" uid="uid://y7ld84hu08ui" path="res://Assets/background/LoV_extB.png" id="2_3jtuf"]
[ext_resource type="Texture2D" uid="uid://cqusnxcgjx2o0" path="res://Assets/icons/85940c4bec1b188-export1.png" id="3_8gcyv"]
[ext_resource type="Texture2D" uid="uid://cd5ffqmvywsmf" path="res://Assets/icons/85940c4bec1b188-export2.png" id="4_p37np"]
[ext_resource type="Texture2D" uid="uid://cxinw1nukuqhl" path="res://Assets/icons/85940c4bec1b188-export3.png" id="5_63xey"]
[ext_resource type="FontFile" uid="uid://cru7vmbpoyic2" path="res://Assets/fonts/Fortzilla-Regular.ttf" id="12_5nhfc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vh05u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8gcyv")
}, {
"duration": 1.0,
"texture": ExtResource("4_p37np")
}, {
"duration": 1.0,
"texture": ExtResource("5_63xey")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0xn7")

[node name="BG1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1121.0
offset_top = -833.0
offset_right = 587.0
offset_bottom = 893.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3jtuf")
expand_mode = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(500, 344)
rotation = 5.48033
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_vh05u")
autoplay = "default"
frame_progress = 0.514208

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -338.0
offset_right = 279.0
grow_vertical = 0
theme_override_constants/margin_left = 45
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("12_5nhfc")
theme_override_font_sizes/font_size = 40
text = " NEW GAME"

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_5nhfc")
theme_override_font_sizes/font_size = 40
disabled = true
text = "CONTINUE"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_5nhfc")
theme_override_font_sizes/font_size = 40
text = " SETTINGS"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../NewGameButton")
theme_override_fonts/font = ExtResource("12_5nhfc")
theme_override_font_sizes/font_size = 40
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
